--- a/math.bib
+++ b/math.bib
@@ -99,29 +99,37 @@ pages = {2098--2109},
 }
 
 @article{duncan2019geometry,
-  title={On the geometry of Stein variational gradient descent},
-  author={Duncan, Andrew and N{\"u}sken, Nikolas and Szpruch, Lukasz},
+  title={On the geometry of {S}tein variational gradient descent},
+  author={Duncan, A. and N{\"u}sken, N. and Szpruch, L.},
   journal={arXiv preprint arXiv:1912.00894},
   year={2019}
 }
 
-@article{liu2017stein,
+
+
+@inproceedings{liu2017stein,
   title={Stein variational gradient descent as gradient flow},
-  author={Liu, Qiang},
-  journal={arXiv preprint arXiv:1704.07520},
+  author={Liu, Q.},
+  booktitle = {Advances in Neural Information Processing Systems (NIPS)},
+  pages={3115--3123},
   year={2017}
 }
 
-@article{pu2017vae,
-  title={VAE learning via Stein variational gradient descent},
-  author={Pu, Yunchen and Gan, Zhe and Henao, Ricardo and Li, Chunyuan and Han, Shaobo and Carin, Lawrence},
-  journal={arXiv preprint arXiv:1704.05155},
-  year={2017}
+
+
+@inproceedings{pu2017vae,
+ author = {Pu, Y. and Gan, Z. and Henao, R. and Li, C. and Han, S. and Carin, L.},
+ booktitle = {Advances in Neural Information Processing Systems (NIPS)},
+ pages = {4236--4245},
+ title = {{VAE} Learning via {S}tein Variational Gradient Descent},
+ year = {2017}
 }
+
+
 
 @article{liu2017policy,
   title={Stein variational policy gradient},
-  author={Liu, Yang and Ramachandran, Prajit and Liu, Qiang and Peng, Jian},
+  author={Liu, Y. and Ramachandran, P. and Liu, Q. and Peng, J.},
   journal={arXiv preprint arXiv:1704.02399},
   year={2017}
 }
@@ -135,51 +143,51 @@ pages = {2098--2109},
 
 @article{nusken2021stein,
   title={Stein Variational Gradient Descent: many-particle and long-time asymptotics},
-  author={N{\"u}sken, Nikolas and Renger, DR},
+  author={N{\"u}sken, N. and Renger, DR},
   journal={arXiv preprint arXiv:2102.12956},
   year={2021}
 }
 
-@article{zhang2019scalable,
-  title={Scalable thompson sampling via optimal transport},
-  author={Zhang, Ruiyi and Wen, Zheng and Chen, Changyou and Carin, Lawrence},
-  journal={arXiv preprint arXiv:1902.07239},
-  year={2019}
-}
+
+
+@InProceedings{zhang2019scalable,
+  title = 	 {Scalable {T}hompson Sampling via Optimal Transport},
+  author =       {Zhang, R. and Wen, Z. and Chen, C. and Fang, C. and Yu, T. and Carin, L.},
+  booktitle = 	 {International Conference on Artificial Intelligence and Statistics (AISTATS)},
+  pages = 	 {87--96},
+  year = 	 {2019}
+  }
 
 
 @inproceedings{zhang2018learning,
   title={Learning structural weight uncertainty for sequential decision-making},
-  author={Zhang, Ruiyi and Li, Chunyuan and Chen, Changyou and Carin, Lawrence},
-  booktitle={International Conference on Artificial Intelligence and Statistics},
+  author={Zhang, R. and Li, C. and Chen, C. and Carin, L.},
+  booktitle={International Conference on Artificial Intelligence and Statistics (AISTATS)},
   pages={1137--1146},
-  year={2018},
-  organization={PMLR}
+  year={2018}
 }
 
 @inproceedings{zhang2020stochastic,
   title={Stochastic particle-optimization sampling and the non-asymptotic convergence theory},
-  author={Zhang, Jianyi and Zhang, Ruiyi and Carin, Lawrence and Chen, Changyou},
-  booktitle={International Conference on Artificial Intelligence and Statistics},
+  author={Zhang, J. and Zhang, R. and Carin, L. and Chen, C.},
+  booktitle={International Conference on Artificial Intelligence and Statistics (AISTATS)},
   pages={1877--1887},
-  year={2020},
-  organization={PMLR}
+  year={2020}
 }
 
 @inproceedings{tao2019variational,
-  title={Variational annealing of GANs: A Langevin perspective},
-  author={Tao, Chenyang and Dai, Shuyang and Chen, Liqun and Bai, Ke and Chen, Junya and Liu, Chang and Zhang, Ruiyi and Bobashev, Georgiy and Duke, Lawrence Carin},
-  booktitle={International conference on machine learning},
+  title={Variational annealing of {GANs}: A {L}angevin perspective},
+  author={Tao, C. and Dai, S. and Chen, L. and Bai, K. and Chen, J. and Liu, C. and Zhang, R. and Bobashev, G. and Carin, L.},
+  booktitle={International Conference on Machine Learning (ICML)},
   pages={6176--6185},
-  year={2019},
-  organization={PMLR}
+  year={2019}
 }
 
 
 
 @article{lu2019scaling,
-  title={Scaling limit of the Stein variational gradient descent: The mean field regime},
-  author={Lu, Jianfeng and Lu, Yulong and Nolen, James},
+  title={Scaling limit of the {S}tein variational gradient descent: The mean field regime},
+  author={Lu, J. and Lu, Y. and Nolen, J.},
   journal={SIAM Journal on Mathematical Analysis},
   volume={51},
   number={2},
@@ -191,8 +199,8 @@ pages = {2098--2109},
 
 @inproceedings{liu2016stein,
   title={Stein variational gradient descent: A general purpose {B}ayesian inference algorithm},
-  author={Liu, Qiang and Wang, Dilin},
-  booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
+  author={Liu, Q. and Wang, D.},
+  booktitle={Advances in Neural Information Processing Systems (NIPS)},
   pages={2378--2386},
   year={2016}
 }
@@ -217,9 +225,9 @@ pages = {2098--2109},
 
 @inproceedings{salim2020primal,
   title={Primal Dual Interpretation of the Proximal Stochastic Gradient {L}angevin Algorithm},
-  author={Salim, Adil and Richt{\'a}rik, Peter},
+  author={Salim, A. and Richt{\'a}rik, P.},
   booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
-  note={to appear},
+  pages = {3786--3796},
   year={2020}
 }
 
@@ -234,9 +242,9 @@ pages = {2098--2109},
 
 @inproceedings{korba2020non,
   title={A Non-Asymptotic Analysis for {S}tein Variational Gradient Descent},
-  author={Korba, Anna and Salim, Adil and Arbel, Michael and Luise, Giulia and Gretton, Arthur},
+  author={Korba, A. and Salim, A. and Arbel, M. and Luise, G. and Gretton, A.},
   booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
-  note={to appear},
+  pages = {4672--4682},
   year={2020}
 }
 
@@ -322,7 +330,7 @@ MRREVIEWER = {V. K. Ohanyan},
 
 @inproceedings{shen2019randomized,
   title={The randomized midpoint method for log-concave sampling},
-  author={Shen, Ruoqi and Lee, Yin Tat},
+  author={Shen, R. and Lee, Y. T.},
   booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
   pages={2100--2111},
   year={2019}
@@ -370,28 +378,26 @@ MRREVIEWER = {V. K. Ohanyan},
 }
 
 @inproceedings{liu2016kernelized,
-  title={A kernelized Stein discrepancy for goodness-of-fit tests},
-  author={Liu, Qiang and Lee, Jason and Jordan, Michael},
-  booktitle={International conference on machine learning},
+  title={A kernelized {S}tein discrepancy for goodness-of-fit tests},
+  author={Liu, Q. and Lee, J. and Jordan, M.},
+  booktitle={International Conference on Machine Learning (ICML)},
   pages={276--284},
-  year={2016},
-  organization={PMLR}
+  year={2016}
 }
 
 
 
 @inproceedings{chwialkowski2016kernel,
   title={A kernel test of goodness of fit},
-  author={Chwialkowski, Kacper and Strathmann, Heiko and Gretton, Arthur},
-  booktitle={International conference on machine learning},
+  author={Chwialkowski, K. and Strathmann, H. and Gretton, A.},
+  booktitle={International Conference on Machine Learning (ICML)},
   pages={2606--2615},
-  year={2016},
-  organization={PMLR}
+  year={2016}
 }
 
 @article{oates2019convergence,
   title={Convergence rates for a class of estimators based on Stein’s method},
-  author={Oates, Chris J and Cockayne, Jon and Briol, Fran{\c{c}}ois-Xavier and Girolami, Mark and others},
+  author={Oates, C. J. and Cockayne, J. and Briol, F.-X. and Girolami, M.},
   journal={Bernoulli},
   volume={25},
   number={2},
@@ -704,8 +710,8 @@ MRREVIEWER = {Henry Wolkowicz},
 
 @inproceedings{csimvsekli2017fractional,
   title={Fractional {L}angevin {M}onte {C}arlo: Exploring {L}{\'e}vy driven stochastic differential equations for {M}arkov {C}hain {M}onte {C}arlo},
-  author={{\c{S}}im{\v{S}}ekli, U.},
-  booktitle={International Conference on Machine Learning},
+  author={{\c{S}}im{\c{s}}ekli, U.},
+  booktitle={International Conference on Machine Learning (ICML)},
   pages={3200--3209},
   year={2017},
 }
@@ -713,7 +719,7 @@ MRREVIEWER = {Henry Wolkowicz},
 @inproceedings{hsieh2018mirrored,
   title={Mirrored {L}angevin Dynamics},
   author={Hsieh, Y.-P. and Kavis, A. and Rolland, P. and Cevher, V.},
-  booktitle={Advances in Neural Information Processing Systems},
+  booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
   pages={2878--2887},
   year={2018}
 }
@@ -4623,7 +4629,7 @@ MRREVIEWER = {Teresa Winiarska},
 @inproceedings{zou2019sampling,
   title={Sampling from Non-Log-Concave Distributions via Variance-Reduced Gradient {L}angevin Dynamics},
   author={Zou, D. and Xu, P. and Gu, Q.},
-  booktitle={The 22nd International Conference on Artificial Intelligence and Statistics},
+  booktitle={International Conference on Artificial Intelligence and Statistics (AISTATS)},
   pages={2936--2945},
   year={2019}
 }
@@ -5883,7 +5889,7 @@ MRREVIEWER = {Sorin-Mihai Grad},
 
 @book{villani2003topics,
   title={Topics in optimal transportation},
-  author={Villani, C{\'e}dric},
+  author={Villani, C.},
   number={58},
   year={2003},
   publisher={American Mathematical Soc.}
@@ -5891,7 +5897,7 @@ MRREVIEWER = {Sorin-Mihai Grad},
 
 @book{villani2008optimal,
   title={Optimal transport: old and new},
-  author={Villani, C{\'e}dric},
+  author={Villani, C.},
   volume={338},
   year={2008},
   publisher={Springer Science \& Business Media}
@@ -6020,19 +6026,17 @@ MRREVIEWER = {Ramendra Krishna Bose},
 
 @inproceedings{gorham2017measuring,
   title={Measuring sample quality with kernels},
-  author={Gorham, Jackson and Mackey, Lester},
-  booktitle={International Conference on Machine Learning},
+  author={Gorham, J. and Mackey, L.},
+  booktitle={International Conference on Machine Learning (ICML)},
   pages={1292--1301},
-  year={2017},
-  organization={PMLR}
+  year={2017}
 }
 
 
 @inproceedings{rolland2020double,
-  title={Double-loop unadjusted langevin algorithm},
-  author={Rolland, Paul and Eftekhari, Armin and Kavis, Ali and Cevher, Volkan},
-  booktitle={International Conference on Machine Learning},
+  title={Double-loop unadjusted {L}angevin algorithm},
+  author={Rolland, P. and Eftekhari, A. and Kavis, A. and Cevher, V.},
+  booktitle={International Conference on Machine Learning (ICML)},
   pages={8169--8177},
-  year={2020},
-  organization={PMLR}
+  year={2020}
 }
