--- a/math.bib
+++ b/math.bib
@@ -44,7 +44,7 @@
 }
 
 @inproceedings{chewi2020svgd,
-  title={{SVGD} as a kernelized Wasserstein gradient flow of the chi-squared divergence},
+  title={{SVGD} as a kernelized {W}asserstein gradient flow of the chi-squared divergence},
   author={Chewi, S. and Gouic, T. Le and Lu, C. and Maunu, T. and Rigollet, P.},
   booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
 pages = {2098--2109},
@@ -1175,7 +1175,7 @@ pages={},
 @inproceedings{bernton2018langevin,
   title={{L}angevin {M}onte {C}arlo and {JKO} splitting},
   author={Bernton, E.},
-  booktitle={Conference On Learning Theory (COLT)},
+  booktitle={Conference on Learning Theory (COLT)},
   year={2018},
   pages={1777-1798}
 }
