--- a/main.tex
+++ b/main.tex
@@ -719,6 +719,9 @@ Conditions under which $I_{\st}(\mu_n|\pi) \rightarrow_{n \to +\infty} 0 \Righta
 \subsection{Complexity}
 
 \peter{add some text}
+\Sun{We provide the convergence rate for the arithmetic mean of the Kernel Stein Discrepancy
+	(KSD) which is $\cO(\frac{1}{n})$, under some assumptions on kernel and $\pi$, this can further
+	 used to prove the weak convergence of $\mu_n$. However we can not guarantee the convergence under $KL-divergence$. }
 
 \begin{corollary}[Convergence rate]
 \label{cor:conv}
@@ -749,6 +752,7 @@ $
 \end{proof}
 
 \peter{add some text}
+
 
 \begin{corollary}[Complexity]
 \label{cor:comp}
