--- a/main.tex
+++ b/main.tex
@@ -643,7 +643,7 @@ or
 %  We provide here a sketch of the proof and the main ideas, the reader may refer to the \Cref{sec:proof_descent}  %\Cref{sec:proof_descent} 
 %  for the complete proof.
 
-\peter{Explain what the theorem says.}
+%\peter{Explain what the theorem says.}
 \Sun{We need $\gamma\|h_{\mu_n}\|_{\cH}\leq \frac{\alpha-1}{\alpha B}$ to bound the Wasserstein Hessian of $KL-divergence$. Unlike in \cite{korba2020non}, under Assumption
 	 \ref{ass:T1}, we prove that $\gamma$ doesn't rely on the path information which makes our descent lemma self-contained. }
 
@@ -677,7 +677,7 @@ Therefore, if $\gamma > 0$ satisfies \eqref{eq:condition-step}, then $\gamma \|h
 \subsection{Weak convergence}
 We now show that Theorem~\ref{th:svgd} implies  weak convergence.
 
-\peter{Comment on the weakness of the assumption $I_{\st}(\mu_n|\pi) \rightarrow_{n \to +\infty} 0 \Rightarrow \mu_n \rightarrow_{n \to +\infty} \pi$.}
+%\peter{Comment on the weakness of the assumption $I_{\st}(\mu_n|\pi) \rightarrow_{n \to +\infty} 0 \Rightarrow \mu_n \rightarrow_{n \to +\infty} \pi$.}
 \Sun{To prove the weak convergence result, we need $(\mu_n)_{n\geq 1}$ to be uniformly tight which means for every $\epsilon$, there exists a finite radius $R_{\epsilon}$ such that $\limsup_n \mu_n(\|x\|>R_{\epsilon})\leq \epsilon$. So we need assumptions on kernel $k(\cdot,\cdot)$ and $\pi$ to enforce uniform tightness. }
 
 \begin{corollary}[Weak convergence]
@@ -718,7 +718,7 @@ Conditions under which $I_{\st}(\mu_n|\pi) \rightarrow_{n \to +\infty} 0 \Righta
 
 \subsection{Complexity}
 
-\peter{add some text}
+%\peter{add some text}
 \Sun{We provide the convergence rate for the arithmetic mean of the Kernel Stein Discrepancy
 	(KSD) which is $\cO(\frac{1}{n})$, under some assumptions on kernel and $\pi$, this can further
 	 used to prove the weak convergence of $\mu_n$. However we can not guarantee the convergence under $KL-divergence$. }
@@ -751,8 +751,11 @@ $
     We obtain the result by rearranging the terms.
 \end{proof}
 
-\peter{add some text}
-
+%\peter{add some text}
+\Sun{Comparing with Langevin algorithm(under LSI and complexity is
+	 $\tilde{\cO}(\frac{L^2d}{\lambda^2\epsilon})$), our complexity result for SVGD is better in
+	  terms of $\lambda$ and $L$ and our result is only under T1 which is weaker than LSI with the 
+	  same constant $\lambda$.  }
 
 \begin{corollary}[Complexity]
 \label{cor:comp}
